--- a/website/public/index.html
+++ b/website/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Woonstrijd 28 november vismarkt Groningen"
+      content="Woonstrijd 28 november Vismarkt Groningen"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
